# canny_edge_my_face

./: CMakeLists.txt  README.md  package.xml
launch/: edge_detection.launch
scripts/: canny_edge_detection.py
